Finished basic implementation of integer vector encoding (#442)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1057 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.IntVector/HeuristicLab.IntVector.csproj
+++ b/sources/HeuristicLab.IntVector/HeuristicLab.IntVector.csproj
@@ -39,8 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiscreteCrossover.cs" />
+    <Compile Include="UniformAllPositionsManipulator.cs" />
+    <Compile Include="IntVectorCrossoverBase.cs" />
+    <Compile Include="IntVectorManipulatorBase.cs" />
+    <Compile Include="UniformOnePositionManipulator.cs" />
     <Compile Include="HeuristicLabIntVectorPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniformRandomIntVectorGenerator.cs" />
+    <Compile Include="SinglePointCrossover.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
