--- a/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
+++ b/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ClientFacade.cs" />
     <Compile Include="ClientManager.cs" />
     <Compile Include="DbTestApp.cs" />
+    <Compile Include="ExecutionEngineFacade.cs" />
     <Compile Include="HiveServerCorePlugin.cs" />
     <Compile Include="HiveServerMessages.Designer.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IClientAdapter.cs" />
