--- a/sources/HeuristicLab.Hive.Client.Console/app.config
+++ b/sources/HeuristicLab.Hive.Client.Console/app.config
@@ -18,9 +18,9 @@
                         maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00"
                         enabled="false" />
-                    <security mode="Transport">
-                        <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
-                        <message clientCredentialType="Windows" />
+                    <security mode="None">
+                        <transport clientCredentialType="None" protectionLevel="None" />
+                        <message clientCredentialType="None" />
                     </security>
                 </binding>
             </netTcpBinding>
@@ -29,9 +29,6 @@
             <endpoint address="net.tcp://127.0.0.1:8000/ClientConsole/ClientConsoleCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientConsoleCommunicator"
                 contract="ClientService.IClientConsoleCommunicator" name="NetTcpBinding_IClientConsoleCommunicator">
-                <identity>
-                    <userPrincipalName value="mse08003@fhs-hagenberg.ac.at" />
-                </identity>
             </endpoint>
         </client>
     </system.serviceModel>
