--- a/sources/HeuristicLab/app.config
+++ b/sources/HeuristicLab/app.config
@@ -5,6 +5,8 @@
             <section name="HeuristicLab.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+  <connectionStrings>
+  </connectionStrings>
   <system.serviceModel>
   </system.serviceModel>
   
