--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/app.config
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/app.config
@@ -4,6 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HeuristicLab.Hive.Server.ADODataAccess.Properties.Settings.HiveServerConnectionString"
-            connectionString="Data Source=10.22.20.84;Initial Catalog=HiveServer;Persist Security Info=True;User ID=hive;Password=hive" />
+            connectionString="Data Source=10.22.20.84;Initial Catalog=HiveServer;Persist Security Info=True;User ID=hive;Password=hive"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
