implemented changes to crossover described in ticket #470  - added ChildrenInitializer operator  - modified CrossoverBase and MultiCrossoverBase  - removed unnecessary operators in HeuristicLab.RealVector
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1159 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Evolutionary/HeuristicLab.Evolutionary.csproj
+++ b/sources/HeuristicLab.Evolutionary/HeuristicLab.Evolutionary.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChildrenInitializer.cs" />
     <Compile Include="MultiCrossoverBase.cs" />
     <Compile Include="SASEGASAReunificator.cs" />
     <Compile Include="CrossoverBase.cs" />
