Added a new offspring analyzer that takes advantage of the crossover changes (ticket #475)  - name probably not optimal -> Stefan?
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1177 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Selection.OffspringSelection/HeuristicLab.Selection.OffspringSelection.csproj
+++ b/sources/HeuristicLab.Selection.OffspringSelection/HeuristicLab.Selection.OffspringSelection.csproj
@@ -63,6 +63,7 @@
     <Compile Include="OffspringAnalyzer.cs" />
     <Compile Include="OffspringSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeightedOffspringFitnessComparer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
