--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -80,6 +80,9 @@
     <Compile Include="ChartDataRowsModelDummy.cs" />
     <Compile Include="CompositeShape.cs" />
     <Compile Include="ChartDataRowsModelDataCollector.cs" />
+    <Compile Include="DefaultLabelProvider.cs" />
+    <Compile Include="Grid.cs" />
+    <Compile Include="ILabelProvider.cs" />
     <Compile Include="IMouseEventListener.cs" />
     <Compile Include="PanListener.cs" />
     <Compile Include="TextShape.cs" />
@@ -108,6 +111,7 @@
     <Compile Include="Transform.cs" />
     <Compile Include="WorldShape.cs" />
     <Compile Include="XAxis.cs" />
+    <Compile Include="YAxis.cs" />
     <Compile Include="ZoomListener.cs" />
   </ItemGroup>
   <ItemGroup>
