--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -82,8 +82,15 @@
     <Compile Include="ChartDataRowsModelDataCollector.cs" />
     <Compile Include="DefaultLabelProvider.cs" />
     <Compile Include="Grid.cs" />
+    <Compile Include="HorizontalLineShape.cs" />
     <Compile Include="ILabelProvider.cs" />
     <Compile Include="IMouseEventListener.cs" />
+    <Compile Include="OptionsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OptionsDialog.Designer.cs">
+      <DependentUpon>OptionsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="PanListener.cs" />
     <Compile Include="TextShape.cs" />
     <Compile Include="LegendShape.cs" />
@@ -136,6 +143,9 @@
     <EmbeddedResource Include="LineChart.resx">
       <DependentUpon>LineChart.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionsDialog.resx">
+      <DependentUpon>OptionsDialog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
