Implemented a continuous-, discrete- and string- label provider for the X/Y axis labels. (#433)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1194 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -80,10 +80,11 @@
     <Compile Include="ChartDataRowsModelDummy.cs" />
     <Compile Include="CompositeShape.cs" />
     <Compile Include="ChartDataRowsModelDataCollector.cs" />
-    <Compile Include="DefaultLabelProvider.cs" />
+    <Compile Include="LabelProvider\ContinuousLabelProvider.cs" />
+    <Compile Include="LabelProvider\DiscreteLabelProvider.cs" />
     <Compile Include="Grid.cs" />
     <Compile Include="HorizontalLineShape.cs" />
-    <Compile Include="ILabelProvider.cs" />
+    <Compile Include="LabelProvider\ILabelProvider.cs" />
     <Compile Include="IMouseEventListener.cs" />
     <Compile Include="OptionsDialog.cs">
       <SubType>Form</SubType>
@@ -92,6 +93,7 @@
       <DependentUpon>OptionsDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="PanListener.cs" />
+    <Compile Include="LabelProvider\StringLabelProvider.cs" />
     <Compile Include="TextShape.cs" />
     <Compile Include="LegendShape.cs" />
     <Compile Include="DataRow.cs" />
