--- a/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
+++ b/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5010BD86-23B7-4F8C-888A-76D21AD5266A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -81,6 +81,8 @@
     <Compile Include="CoreApplication.cs" />
     <Compile Include="CorePlugin.cs" />
     <Compile Include="Heartbeat.cs" />
+    <Compile Include="JobStorrage\JobStorrageInfo.cs" />
+    <Compile Include="JobStorrage\JobStorrageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
