--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -119,6 +119,7 @@
     <Compile Include="RectangleShape.cs" />
     <Compile Include="SizeD.cs" />
     <Compile Include="Transform.cs" />
+    <Compile Include="Translate.cs" />
     <Compile Include="WorldShape.cs" />
     <Compile Include="XAxis.cs" />
     <Compile Include="YAxis.cs" />
