interface updated to new version (#474)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1256 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/app.config
+++ b/sources/HeuristicLab.Hive.Client.Console/app.config
@@ -29,6 +29,9 @@
             <endpoint address="net.tcp://127.0.0.1:8000/ClientConsole/ClientConsoleCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientConsoleCommunicator"
                 contract="ClientService.IClientConsoleCommunicator" name="NetTcpBinding_IClientConsoleCommunicator">
+                <identity>
+                    <userPrincipalName value="mse08004@fhs-hagenberg.ac.at" />
+                </identity>
             </endpoint>
         </client>
     </system.serviceModel>
