--- a/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
+++ b/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
@@ -82,6 +82,7 @@
     <Compile Include="InternalInterfaces\DataAccess\IUserAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IUserGroupAdapter.cs" />
     <Compile Include="InternalInterfaces\IInternalJobManager.cs" />
+    <Compile Include="InternalInterfaces\IScheduler.cs" />
     <Compile Include="JobManager.cs" />
     <Compile Include="LifecycleManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
