#520 Implemented font changes of x-axis, legend and title
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1337 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Options\OptionsDialog.Designer.cs">
       <DependentUpon>OptionsDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Options\ViewPropertiesModel.cs" />
     <Compile Include="PanListener.cs" />
     <Compile Include="LabelProvider\StringLabelProvider.cs" />
     <Compile Include="TextShape.cs" />
