--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -99,7 +99,7 @@
     <Compile Include="Options\OptionsDialog.Designer.cs">
       <DependentUpon>OptionsDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Options\ViewPropertiesModel.cs" />
+    <Compile Include="Options\ViewSettings.cs" />
     <Compile Include="PanListener.cs" />
     <Compile Include="LabelProvider\StringLabelProvider.cs" />
     <Compile Include="TextShape.cs" />
