part three of the awesome "FixTheBug!" Show (#529)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1368 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.ExecutionEngine/HeuristicLab.Hive.Client.ExecutionEngine.csproj
+++ b/sources/HeuristicLab.Hive.Client.ExecutionEngine/HeuristicLab.Hive.Client.ExecutionEngine.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Executor.cs" />
     <Compile Include="ExecutionEnginePlugin.cs" />
+    <Compile Include="InvalidStateException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
