Implementing Lifecycle Management (#453)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1369 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HeuristicLab.Hive.Contracts.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/HeuristicLab.Hive.Contracts.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Response.cs" />
     <Compile Include="ResponseHB.cs" />
     <Compile Include="ResponseList.cs" />
+    <Compile Include="ResponsePlugin.cs" />
     <Compile Include="ResponseResultReceived.cs" />
   </ItemGroup>
   <ItemGroup>
