--- a/sources/HeuristicLab.Hive.Client.Communication/app.config
+++ b/sources/HeuristicLab.Hive.Client.Communication/app.config
@@ -12,8 +12,8 @@
                     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                         maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00"
-                        enabled="false" />
-                    <security mode="Transport">
+                        enabled="true" />
+                    <security mode="None">
                         <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
                         <message clientCredentialType="Windows" />
                     </security>
@@ -21,13 +21,9 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://10.20.53.2:9000/HiveServer/ClientCommunicator"
+            <endpoint address="net.tcp://10.20.53.3:9000/HiveServer/ClientCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientCommunicator"
-                contract="ServerService.IClientCommunicator" name="NetTcpBinding_IClientCommunicator">
-                <identity>
-                    <userPrincipalName value="mse08023@fhs-hagenberg.ac.at" />
-                </identity>
-            </endpoint>
+                contract="ServerService.IClientCommunicator" name="NetTcpBinding_IClientCommunicator" />
         </client>
     </system.serviceModel>
 </configuration>
