--- a/sources/HeuristicLab.Security.DataAccess/HeuristicLab.Security.DataAccess.csproj
+++ b/sources/HeuristicLab.Security.DataAccess/HeuristicLab.Security.DataAccess.csproj
@@ -55,6 +55,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IDataAdapter.cs" />
     <Compile Include="IPermissionAdapter.cs" />
     <Compile Include="IPermissionOwnerAdapter.cs" />
     <Compile Include="IUserAdapter.cs" />
