--- a/sources/HeuristicLab/HeuristicLab.csproj
+++ b/sources/HeuristicLab/HeuristicLab.csproj
@@ -145,6 +145,7 @@
 set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
+set Platform=$(PlatformName)
 
 call MergeConfigs.cmd
 call CopyAssemblies.cmd
