added some manipulation operators (#540)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1413 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SimOpt/HeuristicLab.SimOpt.csproj
+++ b/sources/HeuristicLab.SimOpt/HeuristicLab.SimOpt.csproj
@@ -72,7 +72,16 @@
       <DependentUpon>IntParameterBoundConstraintView.cs</DependentUpon>
     </Compile>
     <Compile Include="IntParameterBoundConstraint.cs" />
+    <Compile Include="NumericDataRoundedAverageMultiCrossover.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="SimOptCrossoverPreparator.cs" />
+    <Compile Include="SimOptSelfAdaptiveNumericVectorNormalMutation.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="SimOptSelfAdaptiveNumericVectorProbabilityMutation.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="SimOptSequentialSubOperatorProcessor.cs" />
     <Compile Include="SimOptSquentialSubOperatorCrossover.cs" />
     <Compile Include="DoubleParameterBoundConstraint.cs" />
