Introduced paging for queries to fix problems with large WCF messages. #257 (CEDMA console doesn't handle communication- and timeout exceptions correctly)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1417 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StoreProxy.cs" />
     <Compile Include="IResultsViewFactory.cs" />
     <Compile Include="ResultsEntry.cs" />
     <Compile Include="TableResultsView.cs">
