Implemented Cahded Plugin class (#546)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1439 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -68,6 +68,7 @@
     <Compile Include="AssemblyBuildDateAttribute.cs" />
     <Compile Include="BaseClasses\ApplicationBase.cs" />
     <Compile Include="BaseClasses\PluginBase.cs" />
+    <Compile Include="CachedPlugin.cs" />
     <Compile Include="ClassInfoAttribute.cs" />
     <Compile Include="Interfaces\IApplication.cs" />
     <Compile Include="Interfaces\IControl.cs" />
