--- a/sources/HeuristicLab.CEDMA.DB/HeuristicLab.CEDMA.DB.csproj
+++ b/sources/HeuristicLab.CEDMA.DB/HeuristicLab.CEDMA.DB.csproj
@@ -102,6 +102,7 @@
     <Content Include="SemWeb.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SemWeb.SqliteStore.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
