Refactored DAL (now using GUIDs as IDs instead of longs) (#527)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1449 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/app.config
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HeuristicLab.Hive.Server.ADODataAccess.Properties.Settings.HiveServerConnectionString"
-            connectionString="Data Source=10.22.20.84;Initial Catalog=HiveServer;Persist Security Info=True;User ID=hive;Password=hive"
+            connectionString="Data Source=10.20.71.10;Initial Catalog=HeuristicLab.Hive;Persist Security Info=True;User ID=hive;Password=hive"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
