--- a/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
+++ b/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Heartbeat.cs" />
     <Compile Include="JobStorage\JobStorageInfo.cs" />
     <Compile Include="JobStorage\JobStorageManager.cs" />
+    <Compile Include="PluginCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
