--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E392A1E2-DC95-4E33-B82E-8ED690EDA1AB}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="AvgAggregator.cs" />
     <Compile Include="AvgLineAggregator.cs" />
+    <Compile Include="AxisPosition.cs" />
     <Compile Include="AxisTicks.cs" />
     <Compile Include="Canvas.cs" />
     <Compile Include="CanvasUI.cs">
