--- a/sources/HeuristicLab.Persistence/HeuristicLab.Persistence.csproj
+++ b/sources/HeuristicLab.Persistence/HeuristicLab.Persistence.csproj
@@ -43,6 +43,10 @@
   </Target>
   -->
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.4.369, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.PluginInfrastructure.GUI\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
